[package]
name = "mda-mailchannels"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
reqwest = "0.12"
mail-parser = "0.11"
tokio = { version = "1", features = ["full"] }
quick-error = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.12", features = ["base64", "macros"] }
log = "0.4"
simplelog = "0.12"
